feat: update tampilan

--- a/index.html
+++ b/index.html
@@ -48,13 +48,53 @@
         <div class="notif-body-container">
           <!-- start notif wrapper -->
           <div class="notif-wrapper">
-            <img src="assets/images/user-regular.svg" />
+            <img
+              src="assets/images/user-regular.svg"
+              class="notif-img-profile"
+            />
             <div class="notif-info-wrapper">
-              <div class="notif-profile-wrapper">
+              <!-- <div class="notif-profile-wrapper">
                 <a href="#" class="profile-link">Mark Webber</a>
-                <p class="info-text">reacted to your recent post</p>
+                <p class="info-text"> reacted to your recent post</p>
                 <a href="#" class="object-link">My first tournament today!</a>
-              </div>
+              </div> -->
+              <p class="notif-profile-wrapper">
+                <a href="#" class="profile-link">Mark Webber</a> reacted to your
+                recent post
+                <a href="#" class="object-link">My first tournament today!</a>
+              </p>
+              <p class="notif-time">1m ago</p>
+            </div>
+          </div>
+          <!-- end notif wrapper -->
+          <!-- start notif wrapper -->
+          <div class="notif-wrapper">
+            <img
+              src="assets/images/user-regular.svg"
+              class="notif-img-profile"
+            />
+            <div class="notif-info-wrapper">
+              <p class="notif-profile-wrapper">
+                <a href="#" class="profile-link">Mark Webber</a> reacted to your
+                recent post
+                <a href="#" class="object-link">My first tournament today!</a>
+              </p>
+              <p class="notif-time">1m ago</p>
+            </div>
+          </div>
+          <!-- end notif wrapper -->
+          <!-- start notif wrapper -->
+          <div class="notif-wrapper">
+            <img
+              src="assets/images/user-regular.svg"
+              class="notif-img-profile"
+            />
+            <div class="notif-info-wrapper">
+              <p class="notif-profile-wrapper">
+                <a href="#" class="profile-link">Mark Webber</a> reacted to your
+                recent post
+                <a href="#" class="object-link">My first tournament today!</a>
+              </p>
               <p class="notif-time">1m ago</p>
             </div>
           </div>
