--- a/index.html
+++ b/index.html
@@ -48,23 +48,45 @@
         <div class="notif-body-container">
           <!-- start notif wrapper -->
           <div class="notif-wrapper">
+            <img src="assets/images/user-regular.svg" class="notif-avatar" />
+            <div class="notif-info-wrapper">
+              <div class="notif-profile-wrapper">
+                <a href="#" class="subject-name">Mark Webber</a>
+                <a href="#" class="object-link">My first tournament today!</a>
+              </div>
+              <p class="notif-time">1m ago</p>
+              <a href="#" class="private-message"
+                >Hello, thanks for setting up the Chess Club. I've been a member
+                for a few weeks now and I'm already having lots of fun and
+                improving my game.</a
+              >
+            </div>
+          </div>
+          <!-- end notif wrapper -->
+
+          <!-- start notif wrapper -->
+          <div class="notif-wrapper">
             <img
-              src="assets/images/user-regular.svg"
-              class="notif-img-profile"
+              src="assets/images/avatar-mark-webber.webp"
+              alt=""
+              class="notif-avatar"
             />
             <div class="notif-info-wrapper">
-              <!-- <div class="notif-profile-wrapper">
-                <a href="#" class="profile-link">Mark Webber</a>
-                <p class="info-text"> reacted to your recent post</p>
+              <div class="notif-info-wrapper-child">
+                <a href="#" class="subject-name">Mark Webber</a>
+                <p class="predicate-txt">reacted to your recent post</p>
                 <a href="#" class="object-link">My first tournament today!</a>
-              </div> -->
-              <p class="notif-profile-wrapper">
-                <a href="#" class="profile-link">Mark Webber</a> reacted to your
-                recent post
-                <a href="#" class="object-link">My first tournament today!</a>
-              </p>
+              </div>
               <p class="notif-time">1m ago</p>
+              <a href="#" class="private-message"
+                >Hello, thanks for setting up the Chess Club. I've been a member
+                for a few weeks now and I'm already having lots of fun and
+                improving my game.</a
+              >
             </div>
+            <a href="#" class="object-img">
+              <img src="assets/images/avatar-mark-webber.webp" alt="" />
+            </a>
           </div>
           <!-- end notif wrapper -->
         </div>
