feat:updating style

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <div class="notif-info-wrapper">
               <div class="notif-info-wrapper-child">
                 <a href="#" class="subject-name">Mark Webber</a>
-                <p class="predicate-txt">reacted to your recent post</p>
-                <a href="#" class="object-link">My first tournament today!</a>
+                <span class="predicate-txt">reacted to your recent post</span>
+                <a href="#" class="object-link">5 end-game strategies to increase your win rate</a>
               </div>
               <p class="notif-time">1m ago</p>
               <a href="#" class="private-message"
