fix: fixing style

--- a/index.html
+++ b/index.html
@@ -47,47 +47,6 @@
         <!-- start notif body container -->
         <div class="notif-body-container">
           <!-- start notif wrapper -->
-          <div class="notif-wrapper">
-            <img src="assets/images/user-regular.svg" class="notif-avatar" />
-            <div class="notif-info-wrapper">
-              <div class="notif-profile-wrapper">
-                <a href="#" class="subject-name">Mark Webber</a>
-                <a href="#" class="object-link">My first tournament today!</a>
-              </div>
-              <p class="notif-time">1m ago</p>
-              <a href="#" class="private-message"
-                >Hello, thanks for setting up the Chess Club. I've been a member
-                for a few weeks now and I'm already having lots of fun and
-                improving my game.</a
-              >
-            </div>
-          </div>
-          <!-- end notif wrapper -->
-
-          <!-- start notif wrapper -->
-          <div class="notif-wrapper">
-            <img
-              src="assets/images/avatar-mark-webber.webp"
-              alt=""
-              class="notif-avatar"
-            />
-            <div class="notif-info-wrapper">
-              <div class="notif-info-wrapper-child">
-                <a href="#" class="subject-name">Mark Webber</a>
-                <span class="predicate-txt">reacted to your recent post</span>
-                <a href="#" class="object-link">5 end-game strategies to increase your win rate</a>
-              </div>
-              <p class="notif-time">1m ago</p>
-              <a href="#" class="private-message"
-                >Hello, thanks for setting up the Chess Club. I've been a member
-                for a few weeks now and I'm already having lots of fun and
-                improving my game.</a
-              >
-            </div>
-            <a href="#" class="object-img">
-              <img src="assets/images/avatar-mark-webber.webp" alt="" />
-            </a>
-          </div>
           <!-- end notif wrapper -->
         </div>
         <!-- end notif body container -->
@@ -96,20 +55,12 @@
     </header>
     <!-- end header container -->
 
-    Angela Gray followed you 5m ago Jacob Thompson has joined your group Chess
-    Club 1 day ago Rizky Hasanuddin sent you a private message 5 days ago Hello,
-    thanks for setting up the Chess Club. I've been a member for a few weeks now
-    and I'm already having lots of fun and improving my game. Kimberly Smith
-    commented on your picture 1 week ago Nathan Peterson reacted to your recent
-    post 5 end-game strategies to increase your win rate 2 weeks ago Anna Kim
-    left the group Chess Club 2 weeks ago
-
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
-    </div>
+    </div> -->
 
     <script src="script.js"></script>
   </body>
